name: tables
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: "D:\\Projects\\_2010 Spring\\_items\\tables\\LICENSE"
copyright:
maintainer: Amtal <alex.kropivny@gmail.com
build-depends: base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, bytestring -any,
               bytestring -any, bytestring -any, bytestring -any, bytestring -any,
               bytestring -any, bytestring -any, bytestring -any, bytestring -any,
               bytestring -any, bytestring -any, bytestring -any, bytestring -any,
               bytestring -any, bytestring -any, bytestring -any, bytestring -any,
               bytestring -any, bytestring -any, bytestring -any, bytestring -any,
               bytestring -any, bytestring -any, bytestring -any, bytestring -any,
               bytestring -any, bytestring -any, bytestring -any, bytestring -any,
               bytestring -any, bytestring -any, bytestring -any, monadLib -any,
               monadLib -any, monadLib -any, monadLib -any, monadLib -any,
               monadLib -any, monadLib -any, monadLib -any, monadLib -any,
               monadLib -any, monadLib -any, monadLib -any, monadLib -any,
               monadLib -any, monadLib -any, monadLib -any
stability: experimental
homepage:
package-url: http://github.com/amtal/tables
bug-reports:
synopsis: Loading data from flat files, into typesafe high-level data types.
description: A library for loading denormalized tables stored in flat files, into fancy
             typesafe data structures. Designed to easily define total parsers for
             complex tables, while extracting as much structure as possible.
             (And thus simplifying the data.)
             .
             A table stored in a CSV file might contain over a hundred columns.
             Usually the columns have some structure to them: they might
             encode optional values, or minimum+maximum values, or several
             of identical properties each one containing several columns.
             .
             This library lets you describe the high level structure via a data type.
             Minimal amounts of boilerplate code will then produce a parser from
             the raw strings of the table, into this high level data type.
             .
             The method was inspired by the 'Records are Categories' Galois
             Tech Talk.
category: database
author: Amtal <alex.kropivny@gmail.com
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Text.Tables Text.TSV.ByteString
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
 
executable: tables
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: